--- a/language/data/families/families.json
+++ b/language/data/families/families.json
@@ -1,6 +1,7 @@
 [
 	"austroasiatic_lang_family",
 	"arachnid_lang_family",
+	"afro_asiatic_lang_family",
 	"austroasiatic_lang_family",
 	"austronesian_lang_family",
 	"basque_lang_family",
